Finally fixed horizontal scroll and improved menu open close behaviour for mobile

--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -1,5 +1,10 @@
 body {
-	max-width: 100vw;
+	max-width: 100%;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  position: relative;
 }
 
 // Font-sizes from 10 through 30 
